--- a/14. Фреймворк PyTorch для разработки искусственных нейронных сетей/8/8.ipynb
+++ b/14. Фреймворк PyTorch для разработки искусственных нейронных сетей/8/8.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1f2da8a3",
+   "metadata": {},
+   "source": [
+    "Оригинальный скрипт: https://tirthajyoti.github.io/Notebooks/GAN_1D.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "0f818717",
