--- a/15. Машинное обучение в бизнесе/6/6.ipynb
+++ b/15. Машинное обучение в бизнесе/6/6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cb6e5de8",
+   "id": "49e40ede",
    "metadata": {},
    "source": [
     "Домашнее задание\n",
@@ -34,8 +34,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import catboost as catb\n",
     "from sklearn.metrics import recall_score, precision_score, roc_auc_score, accuracy_score, f1_score"
    ]
   },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d799c8aa",
+   "id": "749be6d5",
    "metadata": {},
    "source": [
     "То есть тут таргетный признак - num, где 0 - отсутствие болезни, 1-4 - наличие(?)"
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ea59e86f",
+   "id": "708987fd",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e0993e73",
+   "id": "ef865d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,13 +578,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7b65a36b",
+   "id": "83edbada",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_features_names = ['cp', 'restecg', 'slope', 'thal']\n",
-    "\n",
-    "model = catb.CatBoostClassifier(silent=True, random_state=21, cat_features=cat_features_names)\n",
+    "model = xgb.XGBClassifier(random_state=1)\n",
     "\n",
     "model.fit(x_train, y_train)\n",
     "y_predict = model.predict(x_test)"
@@ -593,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f5b560a2",
+   "id": "9146432d",
    "metadata": {
     "scrolled": true
    },
@@ -603,10 +601,10 @@
      "output_type": "stream",
      "text": [
       "Classification results:\n",
-      "f1: 81.36%\n",
-      "roc: 82.33%\n",
-      "recall: 75.00%\n",
-      "precision: 88.89%\n"
+      "f1: 75.86%\n",
+      "roc: 77.48%\n",
+      "recall: 68.75%\n",
+      "precision: 84.62%\n"
      ]
     }
    ],
@@ -627,9 +625,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d268635",
+   "metadata": {},
+   "source": [
+    "### **P & U**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "98ac5031",
+   "id": "783f7607",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2e867675",
+   "id": "d042366b",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f4d20c1b",
+   "id": "10c467a3",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +781,7 @@
        "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -847,7 +853,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -923,11 +929,11 @@
        "   thal  num  chol_outlier  class_test  \n",
        "0     6    0             1          -1  \n",
        "1     3    1             1          -1  \n",
-       "2     7    1             1           1  \n",
+       "2     7    1             1          -1  \n",
        "3     3    0             1          -1  \n",
        "4     3    0             1          -1  \n",
        "5     3    0             1          -1  \n",
-       "6     3    1             1          -1  \n",
+       "6     3    1             1           1  \n",
        "7     3    0             1          -1  \n",
        "8     7    1             1           1  \n",
        "9     7    1             1          -1  "
@@ -944,8 +950,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "32e390b0",
+   "execution_count": 14,
+   "id": "a46832ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,8 +962,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "3c8c8396",
+   "execution_count": 15,
+   "id": "8ea07619",
    "metadata": {},
    "outputs": [
     {
@@ -979,8 +985,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "eb2118ea",
+   "execution_count": 16,
+   "id": "b37d7cf3",
    "metadata": {},
    "outputs": [
     {
@@ -988,20 +994,122 @@
      "output_type": "stream",
      "text": [
       "Classification results:\n",
-      "f1: 65.19%\n",
-      "roc: 52.19%\n",
-      "recall: 53.09%\n",
-      "precision: 84.43%\n"
+      "f1: 71.01%\n",
+      "roc: 49.84%\n",
+      "recall: 62.18%\n",
+      "precision: 82.76%\n"
      ]
     }
    ],
    "source": [
-    "model = catb.CatBoostClassifier(silent=True)\n",
+    "model = xgb.XGBClassifier(random_state=1)\n",
     "\n",
     "model.fit(sample_train.iloc[:,:-3].values, \n",
     "          sample_train.iloc[:,-3].values)\n",
     "y_predict = model.predict(sample_test.iloc[:,:-3].values)\n",
     "evaluate_results(sample_test.iloc[:,-2].values, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7a31223",
+   "metadata": {},
+   "source": [
+    "**Возьмем 75%**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "04062ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 105/139 as positives and unlabeling the rest\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod_data = data.copy()\n",
+    "\n",
+    "# получаем индексы положительных образцов\n",
+    "pos_ind = np.where(mod_data.iloc[:,-2] == 1)[0]\n",
+    "\n",
+    "# перемешиваем\n",
+    "np.random.shuffle(pos_ind)\n",
+    "\n",
+    "# оставляем 75% от числа позитивчиков\n",
+    "pos_sample_len = int(np.ceil(0.75 * len(pos_ind)))\n",
+    "print(f'Using {pos_sample_len}/{len(pos_ind)} as positives and unlabeling the rest')\n",
+    "pos_sample = pos_ind[:pos_sample_len]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "30990690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(105, 15) (105, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod_data['class_test'] = -1\n",
+    "mod_data.loc[pos_sample,'class_test'] = 1\n",
+    "\n",
+    "x_data = mod_data.drop(columns=['class_test', 'num'])\n",
+    "y_labeled = mod_data.iloc[:,-1].values # новый класс (P & U)\n",
+    "y_positive = mod_data.iloc[:,-3].values # оригинальный класс\n",
+    "\n",
+    "mod_data = mod_data.sample(frac=1)\n",
+    "neg_sample = mod_data[mod_data['class_test']==-1][:len(mod_data[mod_data['class_test']==1])]\n",
+    "sample_test = mod_data[mod_data['class_test']==-1][len(mod_data[mod_data['class_test']==1]):]\n",
+    "pos_sample = mod_data[mod_data['class_test']==1]\n",
+    "print(neg_sample.shape, pos_sample.shape)\n",
+    "sample_train = pd.concat([neg_sample, pos_sample]).sample(frac=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f06ac483",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification results:\n",
+      "f1: 61.02%\n",
+      "roc: 64.81%\n",
+      "recall: 45.00%\n",
+      "precision: 94.74%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = xgb.XGBClassifier(random_state=1)\n",
+    "\n",
+    "model.fit(sample_train.iloc[:,:-3].values, \n",
+    "          sample_train.iloc[:,-3].values)\n",
+    "y_predict = model.predict(sample_test.iloc[:,:-3].values)\n",
+    "evaluate_results(sample_test.iloc[:,-2].values, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b58fe5e7",
+   "metadata": {},
+   "source": [
+    "Вывод: с увеличением % поднимается precision, но падают другие показатели. Precision поднимается из-за того что, скорее всего, в positive класс больных сердечно-сосудистыми заболеваниями больше, чем 25%. А с чем связано падение f1, roc, recall я не понимаю."
    ]
   }
  ],
