--- a/16. Введение в обработку естественного языка/1/1.ipynb
+++ b/16. Введение в обработку естественного языка/1/1.ipynb
@@ -20,32 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "b86246ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\kasal\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\kasal\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\kasal\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\kasal\\AppData\\Roaming\\nltk_data...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nltk.download('punkt')\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('omw-1.4')\n",
-    "nltk.download('wordnet')\n",
+    "# nltk.download('punkt')\n",
+    "# nltk.download('stopwords')\n",
+    "# nltk.download('omw-1.4')\n",
+    "# nltk.download('wordnet')\n",
     "stop_words = nltk.corpus.stopwords.words('english')\n",
     "stemmer = nltk.stem.PorterStemmer()\n",
     "lemmatizer = nltk.stem.wordnet.WordNetLemmatizer()"
@@ -472,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "5879b962",
    "metadata": {
     "scrolled": true
@@ -480,11 +463,75 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>@user when a father is dysfunctional and is s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>@user @user thanks for #lyft credit i can't us...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>bihday your majesty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>#model   i love u take with u all the time in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>factsguide: society now    #motivation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "pandas.core.frame.DataFrame"
+       "   id  label                                              tweet\n",
+       "0   1    0.0   @user when a father is dysfunctional and is s...\n",
+       "1   2    0.0  @user @user thanks for #lyft credit i can't us...\n",
+       "2   3    0.0                                bihday your majesty\n",
+       "3   4    0.0  #model   i love u take with u all the time in ...\n",
+       "4   5    0.0             factsguide: society now    #motivation"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7146373e",
    "metadata": {},
    "outputs": [],
@@ -521,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "f7724963",
    "metadata": {
     "scrolled": false
@@ -610,7 +657,7 @@
        "4             factsguide: society now    #motivation  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "bb9f54dd",
    "metadata": {},
    "outputs": [],
@@ -643,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "7821cd94",
    "metadata": {
     "scrolled": true
@@ -732,7 +779,7 @@
        "4             factsguide: society now    #motivation  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "481726ee",
    "metadata": {},
    "outputs": [],
@@ -771,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "3b99caed",
    "metadata": {
     "scrolled": true
@@ -860,7 +907,7 @@
        "4                factsguide: society now #motivation  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "25594274",
    "metadata": {},
    "outputs": [],
@@ -893,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "5ba21098",
    "metadata": {
     "scrolled": true
@@ -982,7 +1029,7 @@
        "4                factsguide: society now #motivation  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "fab85cd4",
    "metadata": {},
    "outputs": [],
@@ -1015,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "f7c66e8e",
    "metadata": {
     "scrolled": true
@@ -1104,7 +1151,7 @@
        "4                factsguide: society now #motivation  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "81d72a57",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "f65721a8",
    "metadata": {
     "scrolled": true
@@ -1225,7 +1272,7 @@
        "4                factsguide  society now  motivation  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "deb41cd4",
    "metadata": {},
    "outputs": [],
@@ -1257,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "6b952e87",
    "metadata": {
     "scrolled": true
@@ -1346,7 +1393,7 @@
        "4                factsguide  society now  motivation  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "da8584f2",
    "metadata": {},
    "outputs": [],
@@ -1378,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "dbea83a3",
    "metadata": {
     "scrolled": true
@@ -1467,7 +1514,7 @@
        "4                factsguide  society now  motivation  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "fcce5bf7",
    "metadata": {},
    "outputs": [],
@@ -1500,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "cd041ac0",
    "metadata": {
     "scrolled": true
@@ -1589,7 +1636,7 @@
        "4                  factsguide society now motivation  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1610,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "f47d2dd8",
    "metadata": {
     "scrolled": true
@@ -1712,7 +1759,7 @@
        "4             [factsguide, society, now, motivation]  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "e50473f2",
    "metadata": {
     "scrolled": true
@@ -1848,7 +1895,7 @@
        "4                  [factsguide, society, motivation]  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1869,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "f777e9ca",
    "metadata": {
     "scrolled": true
@@ -1997,7 +2044,7 @@
        "4                        [factsguid, societi, motiv]  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "431c4f03",
    "metadata": {},
    "outputs": [
@@ -2158,7 +2205,7 @@
        "4                  [factsguide, society, motivation]  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2178,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "c393fae6",
    "metadata": {},
    "outputs": [],
