--- a/23. Применение NLP в здравоохранении/3/dz 3.ipynb
+++ b/23. Применение NLP в здравоохранении/3/dz 3.ipynb
@@ -458,7 +458,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>C0000765</td>\n",
-       "      <td>excessive gain body weight</td>\n",
+       "      <td>gain body weight excessive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -468,12 +468,12 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C0002170</td>\n",
-       "      <td>loss alopecia hair</td>\n",
+       "      <td>alopecia loss hair</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>C0549622</td>\n",
-       "      <td>sexual disorder dysfunction</td>\n",
+       "      <td>disorder dysfunction sexual</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -486,10 +486,10 @@
       ],
       "text/plain": [
        "        CUI                      CONCEPT\n",
-       "0  C0000765   excessive gain body weight\n",
+       "0  C0000765   gain body weight excessive\n",
        "1  C0701811       poor short-term memory\n",
-       "2  C0002170           loss alopecia hair\n",
-       "3  C0549622  sexual disorder dysfunction\n",
+       "2  C0002170           alopecia loss hair\n",
+       "3  C0549622  disorder dysfunction sexual\n",
        "4  C0027497                       nausea"
       ]
      },
@@ -538,7 +538,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext were not used when initializing BertModel: ['cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.bias', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext were not used when initializing BertModel: ['cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -548,7 +548,6 @@
     "from transformers import BertTokenizer, BertModel\n",
     "import torch\n",
     "\n",
-    "# Загрузка pubmed BERT модели\n",
     "tokenizer = BertTokenizer.from_pretrained('microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext')\n",
     "model_B = BertModel.from_pretrained('microsoft/BiomedNLP-PubMedBERT-base-uncased-abstract-fulltext')"
    ]
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "2ae03626",
    "metadata": {
     "scrolled": true
@@ -628,8 +627,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 17min 39s\n",
-      "Wall time: 4min 19s\n"
+      "200 / 2150\n",
+      "400 / 2150\n",
+      "600 / 2150\n",
+      "800 / 2150\n",
+      "1000 / 2150\n",
+      "1200 / 2150\n",
+      "1400 / 2150\n",
+      "1600 / 2150\n",
+      "2000 / 2150\n",
+      "0 / 2150\n",
+      "CPU times: total: 17min 59s\n",
+      "Wall time: 4min 21s\n"
      ]
     }
    ],
@@ -652,8 +661,8 @@
     "    complaint_text = ' '.join(complaint_text)\n",
     "\n",
     "    \n",
-    "#     if complaint_id % 200 == 0:\n",
-    "#         print(complaint_id)\n",
+    "    if complaint_id % 200 == 0:\n",
+    "        print(complaint_id, '/ 2150')\n",
     "        \n",
     "    codes = extract_top_codes(complaint_text, model_B, tokenizer, concept_df)\n",
     "    \n",
@@ -662,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "7138ad40",
    "metadata": {
     "scrolled": false
@@ -697,143 +706,53 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>C0011124,C0042023,C0013378</td>\n",
+       "      <td>C0425712,C0701810,C0085602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>C2981158,C0011124,C0021177</td>\n",
+       "      <td>C0011124,C2981158,C0021177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>C0011124,C0042023,C0021177</td>\n",
+       "      <td>C0011124,C0425712,C0021177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>C0036902,C0011124,C0013378</td>\n",
+       "      <td>C3887605,C0011124,C0040332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>C0235283,C0812387,C0563717</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>C0011124,C0042023,C0424528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>C0016382,C0011124,C0423636</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>C0577477,C0011124,C0042023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>C0554978,C0563158,C0424537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>C0577477,C0425082,C0582140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>C0235283,C0016382,C0235239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>C0016382,C0812387,C0424537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13</td>\n",
-       "      <td>C0812387,C0424573,C0581879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14</td>\n",
-       "      <td>C0016382,C0812387,C0235239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>C0812387,C0582051,C0016382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>16</td>\n",
-       "      <td>C0011124,C0042023,C2981158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>17</td>\n",
-       "      <td>C0423636,C0013378,C0278210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>18</td>\n",
-       "      <td>C0156404,C0001241,C0312422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>19</td>\n",
-       "      <td>C0577477,C2981158,C0563158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>20</td>\n",
-       "      <td>C2981158,C0021177,C0312422</td>\n",
+       "      <td>C0424528,C0578994,C0235283</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id                        Code\n",
-       "0    1  C0011124,C0042023,C0013378\n",
-       "1    2  C2981158,C0011124,C0021177\n",
-       "2    3  C0011124,C0042023,C0021177\n",
-       "3    4  C0036902,C0011124,C0013378\n",
-       "4    5  C0235283,C0812387,C0563717\n",
-       "5    6  C0011124,C0042023,C0424528\n",
-       "6    7  C0016382,C0011124,C0423636\n",
-       "7    8  C0577477,C0011124,C0042023\n",
-       "8    9  C0554978,C0563158,C0424537\n",
-       "9   10  C0577477,C0425082,C0582140\n",
-       "10  11  C0235283,C0016382,C0235239\n",
-       "11  12  C0016382,C0812387,C0424537\n",
-       "12  13  C0812387,C0424573,C0581879\n",
-       "13  14  C0016382,C0812387,C0235239\n",
-       "14  15  C0812387,C0582051,C0016382\n",
-       "15  16  C0011124,C0042023,C2981158\n",
-       "16  17  C0423636,C0013378,C0278210\n",
-       "17  18  C0156404,C0001241,C0312422\n",
-       "18  19  C0577477,C2981158,C0563158\n",
-       "19  20  C2981158,C0021177,C0312422"
+       "  id                        Code\n",
+       "0  1  C0425712,C0701810,C0085602\n",
+       "1  2  C0011124,C2981158,C0021177\n",
+       "2  3  C0011124,C0425712,C0021177\n",
+       "3  4  C3887605,C0011124,C0040332\n",
+       "4  5  C0424528,C0578994,C0235283"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result_df.head(20)"
+    "result_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "7489c2e0",
    "metadata": {},
    "outputs": [],
@@ -877,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "5aeb6acd",
    "metadata": {
     "scrolled": true
@@ -912,27 +831,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>C0011124,C0042023,C0013378</td>\n",
+       "      <td>C0425712,C0701810,C0085602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>C2981158,C0011124,C0021177</td>\n",
+       "      <td>C0011124,C2981158,C0021177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>C0011124,C0042023,C0021177</td>\n",
+       "      <td>C0011124,C0425712,C0021177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>C0036902,C0011124,C0013378</td>\n",
+       "      <td>C3887605,C0011124,C0040332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>C0235283,C0812387,C0563717</td>\n",
+       "      <td>C0424528,C0578994,C0235283</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -940,14 +859,14 @@
       ],
       "text/plain": [
        "  id                        Code\n",
-       "0  1  C0011124,C0042023,C0013378\n",
-       "1  2  C2981158,C0011124,C0021177\n",
-       "2  3  C0011124,C0042023,C0021177\n",
-       "3  4  C0036902,C0011124,C0013378\n",
-       "4  5  C0235283,C0812387,C0563717"
+       "0  1  C0425712,C0701810,C0085602\n",
+       "1  2  C0011124,C2981158,C0021177\n",
+       "2  3  C0011124,C0425712,C0021177\n",
+       "3  4  C3887605,C0011124,C0040332\n",
+       "4  5  C0424528,C0578994,C0235283"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "a8600987",
    "metadata": {},
    "outputs": [],
@@ -978,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "57399370",
    "metadata": {},
    "outputs": [
@@ -1012,32 +931,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>C0011124,C0042023,C0013378</td>\n",
-       "      <td>C0011124</td>\n",
+       "      <td>C0425712,C0701810,C0085602</td>\n",
+       "      <td>C0425712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>C2981158,C0011124,C0021177</td>\n",
-       "      <td>C2981158</td>\n",
+       "      <td>C0011124,C2981158,C0021177</td>\n",
+       "      <td>C0011124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>C0011124,C0042023,C0021177</td>\n",
+       "      <td>C0011124,C0425712,C0021177</td>\n",
        "      <td>C0011124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>C0036902,C0011124,C0013378</td>\n",
-       "      <td>C0036902</td>\n",
+       "      <td>C3887605,C0011124,C0040332</td>\n",
+       "      <td>C3887605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>C0235283,C0812387,C0563717</td>\n",
-       "      <td>C0235283</td>\n",
+       "      <td>C0424528,C0578994,C0235283</td>\n",
+       "      <td>C0424528</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1045,14 +964,14 @@
       ],
       "text/plain": [
        "  id                        Code  One_Code\n",
-       "0  1  C0011124,C0042023,C0013378  C0011124\n",
-       "1  2  C2981158,C0011124,C0021177  C2981158\n",
-       "2  3  C0011124,C0042023,C0021177  C0011124\n",
-       "3  4  C0036902,C0011124,C0013378  C0036902\n",
-       "4  5  C0235283,C0812387,C0563717  C0235283"
+       "0  1  C0425712,C0701810,C0085602  C0425712\n",
+       "1  2  C0011124,C2981158,C0021177  C0011124\n",
+       "2  3  C0011124,C0425712,C0021177  C0011124\n",
+       "3  4  C3887605,C0011124,C0040332  C3887605\n",
+       "4  5  C0424528,C0578994,C0235283  C0424528"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "1676b5d8",
    "metadata": {
     "scrolled": true
@@ -1073,21 +992,21 @@
     {
      "data": {
       "text/plain": [
-       "C0812387    283\n",
-       "C0011124    281\n",
-       "C0016382    203\n",
-       "C0042023    194\n",
-       "C2981158     71\n",
+       "C0011124    411\n",
+       "C0700590    156\n",
+       "C0581879    129\n",
+       "C0424528    113\n",
+       "C0424573    110\n",
        "           ... \n",
-       "C0549622      1\n",
-       "C2939147      1\n",
-       "C0234019      1\n",
-       "C0554978      1\n",
+       "C0424110      1\n",
+       "C0241729      1\n",
+       "C0424572      1\n",
+       "C0281856      1\n",
        "C4074950      1\n",
-       "Name: One_Code, Length: 119, dtype: int64"
+       "Name: One_Code, Length: 111, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,16 +1021,16 @@
    "metadata": {},
    "source": [
     "Топ 5:\n",
-    "1. Ощущение зябкости\n",
-    "2. Снижение либидо\n",
-    "3. Покраснение лица\n",
-    "4. Учащение мочеиспускания\n",
+    "1. Снижение либидо Ощущение зябкости\n",
+    "2. Потливость\n",
+    "3. Головокружение\n",
+    "4. Дереализация (\"ощущения как во сне\")\n",
     "5. Снижение либидо"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "2b4dd073",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1068,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>C0011124</td>\n",
+       "      <td>C0425712</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1159,7 +1078,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>C2981158</td>\n",
+       "      <td>C0011124</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1179,7 +1098,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>C0036902</td>\n",
+       "      <td>C3887605</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1189,7 +1108,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>C0235283</td>\n",
+       "      <td>C0424528</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1202,14 +1121,14 @@
       ],
       "text/plain": [
        "  id  One_Code  level_1  level_2  level_3  level_4  level_5\n",
-       "0  1  C0011124        0        0        0        0        1\n",
-       "1  2  C2981158        0        0        0        0        1\n",
+       "0  1  C0425712        0        0        0        0        1\n",
+       "1  2  C0011124        0        0        0        0        1\n",
        "2  3  C0011124        0        0        0        0        1\n",
-       "3  4  C0036902        0        0        0        0        1\n",
-       "4  5  C0235283        0        0        0        0        1"
+       "3  4  C3887605        0        0        0        0        1\n",
+       "4  5  C0424528        0        0        0        0        1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,12 +1147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "a398297b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "adr.to_csv('tychina_3_2.csv') # не убирала индексы!!"
+    "adr_2.to_csv('tychina_3_2.csv') # не убирала индексы!!"
    ]
   }
  ],
